# textris

./: Cargo.toml  LICENSE  README.md  release-win.sh  release.sh
src/: board.rs  context.rs  main.rs  pieces.rs  utils.rs
